Add draft indicator in the channel sidebar and channel switcher

--- a/sass/layout/_sidebar-left.scss
+++ b/sass/layout/_sidebar-left.scss
@@ -43,6 +43,10 @@
         .icon__archive {
             top: 2px;
         }
+
+        .icon__draft {
+            top: 2px;
+        }
     }
 
     .sidebar-item__name {
@@ -247,6 +251,7 @@
                 .icon {
                     &.icon__archive,
                     &.icon__globe,
+                    &.icon__draft,
                     &.icon__lock {
                         @include opacity(.5);
                     }
@@ -309,6 +314,7 @@
                 .icon {
                     &.icon__archive,
                     &.icon__globe,
+                    &.icon__draft,
                     &.icon__lock {
                         @include opacity(.7);
                     }
